# Prefect

./: Dockerfile  README.md  pyproject.toml
scripts/: repair_features.py  repair_model.py  train_enc_dec.py  train_features.py  train_model.py
scripts/subjects/: generate_bc.py  generate_bottle.py  generate_dateutil.py  generate_grep.py  generate_re2.py  generate_sql.py
src/modelizer/: __init__.py  configs.py  forger.py  learner.py  metrics.py  repairer.py  trainer.py  utils.py  validator.py
src/modelizer/backpropagation/: __init__.py  debugger.py  mutator.py
src/modelizer/dependencies/debuggingbook/: __init__.py  coverage.py  tracer.py
src/modelizer/dependencies/fuzzingbook/: __init__.py  fuzzers.py  parsers.py  utils.py
src/modelizer/dependencies/sklearn/: __init__.py  encoder.py
src/modelizer/generators/: __init__.py  abstract.py  fuzzers.py  postprocessor.py  subjects.py
src/modelizer/generators/implementations/: __init__.py
src/modelizer/generators/implementations/coverage/bc/: bc-1.08.1.tar.xz  bc.py  grammar.py  setup.sh
src/modelizer/generators/implementations/coverage/grep/: grep.py  setup.sh
src/modelizer/generators/implementations/utils/: ccov.py  tracer.py  utils.py
src/modelizer/models/: __init__.py  abstract.py  dataset.py  optimizer.py
src/modelizer/models/custom/: __init__.py  custom.py  encoder_decoder.py
src/modelizer/models/legacy/: __init__.py  dataset.py  legacy.py  transformer.py
src/modelizer/tokenizers/: __init__.py  abstract.py  dummy.py  encoder.py  features.py  sentence.py  shared.py
(+16 files in other folders)
