[project]
name = "modelizer"
authors = [{name = "Tural Mammadov", email = "turalevro@gmail.com"}]
version = "2.0.0"
description = "A library for building tools that can automatically learn program models from I/O examples"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU GPLv3 or later"}
keywords = ["deep learning", "program analysis", "machine learning", "artificial intelligence", "reverse engineering"]
classifiers = [
    "Framework :: Modelizer",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Analysis",
    "Topic :: Software Development :: Reverse Engineering",
    "Topic :: Software Development :: Behavior Extraction",
    "Topic :: Software Development :: Machine Learning",
]

dependencies = [
    # General
    'tqdm',
    'wandb',
    'numpy',
    'xxhash',
    'pandas',
    'psutil',
    'requests',
    'cloudpickle',
    'func-timeout',
    # Metrics
    'nltk',
    'jiwer',
    'levenshtein',
    # Modeling
    'torch>=2.0',
    'optuna',
    'hf_xet',
    'tokenizers',
    'bitsandbytes',
    'x-transformers',
    'transformers[torch]',
]

[project.optional-dependencies]
cuda = [
    'flash-attn',
]

[build-system]
requires = ["setuptools>=68",  "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/2ral/modelizer"
"Bug Tracker" = "https://github.com/2ral/modelizer/issues"
